--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ quarkus.package.type=native
 
 # DynamoDB configs
 quarkus.dynamodb.aws.region=eu-south-1
+quarkus.dynamodb.listing.table.name=dynamic-pricing-demo-listings
