--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
     testImplementation 'org.mockito:mockito-core:5.12.0'
+    testImplementation 'org.testcontainers:testcontainers:1.17.6'
 }
 
 group 'it.tref.dynamicpricing.aws.lambda'
